feat(CompanyController) add docs for each method
